# smart-home

./: .dockerignore  .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  build_and_test.sh  cmake_install.cmake  main.cpp  test.cpp
cmake/: Builder.cmake  GenerateFileTree.cmake  GetHostIP.cmake  GetHostIp.cmake  Mockery.cmake  PrintHostIP.cmake  Tester.cmake  ZipSubmission.cmake  include_directories.cmake  linkCurl.cmake  targetMain.cmake  targetTest.cmake
docs/: file_structure.md  planning.md
include/: CommandParser.h  CommandShell.h  Devices.h  HttpClient.h  ThermostatMode.h
include/CommandParser/: CommandParser.h  invoke_device.h  tokenize.h
include/CommandShell/: CommandShell.h
include/CommandType/: CommandType.h
include/Devices/Base/: DeviceMap.h  WebEnabledDevices.h
include/Devices/Device/: Device.h
include/Devices/DeviceMap/: DeviceMap.h
include/Devices/Devices/: Devices.h
include/Devices/Factory/: DeviceFactory.h
include/Devices/WebEnabledDevice/: WebEnabledDevice.h
include/Devices/WebEnabledDevices/: WebEnabledDevices.h
include/Help/: Help.h
include/HttpClient/: HttpClient.h  writeCallback.h
include/Logger/: Logger.h
include/ParserResult/: ParserResult.h  parserResultString.h
include/constants/: exit_codes.h
include/utils/: ConnectionString.h  OnOff.h  RawCommandLine.h  StringUtils.h  Token.h  TokenQueue.h  TokenQueue.tpp  Tokens.h  getCurrentTimestamp.h  getExecutableDir.h  getHostIp.h  getPort.h
include/utils/SimpleJson/: SimpleJson.h
mocks/: Dockerfile  mockLights.py  mockSecurity.py  mockTelevision.py  mockThermostat.py  mockVacuum.py
scripts/: check_vtable.py  graph_includes.py
src/: CommandParser.cpp  CommandShell.cpp  CommandType.cpp  CommandType.h  DeviceFactory.h  DeviceMap.h  Devices.cpp  Help.h  Logger.h  ParserResult.h  Run.cpp  StringUtils.h  Thermostat.cpp  Thermostat.h  ThermostatPtr.h  exit_codes.h  main.cpp  path_utils.h
src/CommandParser/: CommandParser.cpp  constructor.cpp  destructor.cpp  invoke_device.cpp  parse.cpp  tokenize.cpp
src/CommandParser/ParserResult/: parserResultString.cpp
src/CommandShell/: Run.cpp  constructor.cpp  destructor.cpp  displayWelcome.cpp
src/CommandType/: identifyCommand.cpp  to_string.cpp
src/Devices/Base/: WebEnabledDevices.cpp  constructor.cpp
src/Devices/Controllers/: Thermostat.cpp
src/Devices/Device/: GetHealth.cpp  GetState.cpp  constructor.cpp  getHealth.cpp  getRemoteState.cpp  sendCommand.cpp  setRemoteState.cpp  (+1 more)
src/Help/: Help.cpp  getSmartRemark.cpp  showHelp.cpp
src/HttpClient/: HttpClient.cpp  constructor.cpp  destructor.cpp  get.cpp  post.cpp  writeCallback.cpp
src/Logger/: Logger.cpp  constructor.cpp  destructor.cpp  error.cpp  fatal.cpp  info.cpp
src/ParserResult/: parserResultString.cpp  to_string.cpp
src/utils/: OnOff.cpp  Tokens.cpp  getCurrentTimestamp.cpp  getExecutableDir.cpp  getHostIp.cpp  getPort.cpp  toLower.cpp  to_lower.cpp  to_upper.cpp  trim.cpp
test/: http_client.cpp  logger.cpp  main.cpp
test/integration_test/: main.py
(+63 files in other folders)
